objects/AlumniCommunityL2Pages__c.object
<CustomObject><fields>
<fields>
        <fullName>GI_Tile_3_Icon__c</fullName>
        <description>Get Involved - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</description>
        <inlineHelpText>Get Involved - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</inlineHelpText>
        <label>GI Tile 3 Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Splash_Image__c</fullName>
        <description>Give To Babson - Main header image that appears at top of the page, this custom setting sets the ID of the document of this image in Salesforce.</description>
        <inlineHelpText>Give To Babson - Main header image that appears at top of the page, this custom setting sets the ID of the document of this image in Salesforce.</inlineHelpText>
        <label>GTB Splash Image</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_1_Block_Color__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, this custom setting sets the color of the button, icon and header in the n'th tile. Options are: babson-card-full-blue, babson-card-full-green, babson-card-full-lightgreen,babson-card-full-darkgreen,babson-card-full-yellow, babson-card-full-orange, babson-card-full-teal, babson-card-full-yellow, babson-card-full-gold</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page,this custom setting sets the color of the button, icon and header in the n'th tile. See field description for options.</inlineHelpText>
        <label>GTB Tile 1 Block Color</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_1_Button_URL_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting determines if the URL is external from the community of that button in the n'th tile. Checked=External Link. Unchecked=Internal</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting determines if the URL is external from the community of that button in the n'th tile. Checked=External Link. Unchecked=Internal</inlineHelpText>
        <label>GTB Tile 1 Button URL External</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>GTB_Tile_1_Button_URL__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting sets the destination URL of that button in the n'th tile.</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting sets the destination URL of that button in the n'th tile.</inlineHelpText>
        <label>GTB Tile 1 Button URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_1_Icon__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</inlineHelpText>
        <label>GTB Tile 1 Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_2_Block_Color__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, this custom setting sets the color of the button, icon and header in the n'th tile. Options are: babson-card-full-blue, babson-card-full-green, babson-card-full-lightgreen,babson-card-full-darkgreen,babson-card-full-yellow, babson-card-full-orange, babson-card-full-teal, babson-card-full-yellow, babson-card-full-gold</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page,this custom setting sets the color of the button, icon and header in the n'th tile. See field description for options.</inlineHelpText>
        <label>GTB Tile 2 Block Color</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_2_Button_URL_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting determines if the URL is external from the community of that button in the n'th tile. Checked=External Link. Unchecked=Internal</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting determines if the URL is external from the community of that button in the n'th tile. Checked=External Link. Unchecked=Internal</inlineHelpText>
        <label>GTB Tile 2 Button URL External</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>GTB_Tile_2_Button_URL__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting sets the destination URL of that button in the n'th tile.</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting sets the destination URL of that button in the n'th tile.</inlineHelpText>
        <label>GTB Tile 2 Button URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_2_Icon__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</inlineHelpText>
        <label>GTB Tile 2 Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_3_Block_Color__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, this custom setting sets the color of the button, icon and header in the n'th tile. Options are: babson-card-full-blue, babson-card-full-green, babson-card-full-lightgreen,babson-card-full-darkgreen,babson-card-full-yellow, babson-card-full-orange, babson-card-full-teal, babson-card-full-yellow, babson-card-full-gold</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page,this custom setting sets the color of the button, icon and header in the n'th tile. See field description for options.</inlineHelpText>
        <label>GTB Tile 3 Block Color</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_3_Button_URL_External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting determines if the URL is external from the community of that button in the n'th tile. Checked=External Link. Unchecked=Internal</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting determines if the URL is external from the community of that button in the n'th tile. Checked=External Link. Unchecked=Internal</inlineHelpText>
        <label>GTB Tile 3 Button URL External</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>GTB_Tile_3_Button_URL__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting sets the destination URL of that button in the n'th tile.</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with a button in the bottom of it, this custom setting sets the destination URL of that button in the n'th tile.</inlineHelpText>
        <label>GTB Tile 3 Button URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>GTB_Tile_3_Icon__c</fullName>
        <description>Give To Babson - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</description>
        <inlineHelpText>Give To Babson - There are a total of 6 tiles on this page, each with an icon on it, this custom setting determines the Font Awesome icon in the n'th tile. Ex. fa fa-users</inlineHelpText>
        <label>GTB Tile 3 Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><description>Used to allow customizations to the L2 pages in the Alumni Community</description><enableFeeds>false</enableFeeds><label>Alumni Community L2 Pages</label><visibility>Public</visibility></CustomObject>